--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,18 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Alberto/Dropbox/eclipse-workspace/Login-main/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/Dropbox/eclipse-workspace/Login-main/mysql-connector-java-8.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itextpdf-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itextpdf-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itextpdf-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itext-pdfa-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itext-pdfa-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itext-pdfa-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itext-xtra-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itext-xtra-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-itext-xtra-5.5.11-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-xmlworker-5.5.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-xmlworker-5.5.11-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ALBERTO/OneDrive/Escritorio/itext/itext5-xmlworker-5.5.11-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
